added 3d model embeds and nsfw pics

--- a/apps/users/app.rc
+++ b/apps/users/app.rc
@@ -101,7 +101,7 @@ fn users_init {
                 if not if(! ~ $"post_arg_users_age '')
                     _status='You must be at least 18 years of age to use this website'
 
-                for(i in post_arg_users_location post_arg_users_bio post_arg_users_vrc post_arg_users_discord post_arg_users_sc post_arg_users_ig post_arg_users_pubemail post_arg_users_phone)
+                for(i in post_arg_users_location post_arg_users_vrc post_arg_users_discord post_arg_users_sc post_arg_users_ig post_arg_users_pubemail post_arg_users_phone post_arg_users_bio post_arg_users_sketchfab)
                     echo -n $"$i > $dir/`{echo $i | sed 's/post_arg_users_//'}
 
                 for(i in post_arg_users_gender_Woman post_arg_users_gender_Man post_arg_users_gender_Agender post_arg_users_gender_Androgynous post_arg_users_gender_Bigender post_arg_users_gender_Cis_Man post_arg_users_gender_Cis_Woman post_arg_users_gender_Genderfluid post_arg_users_gender_Genderqueer post_arg_users_gender_Gender_Nonconforming post_arg_users_gender_Hijra post_arg_users_gender_Intersex post_arg_users_gender_Nonbinary post_arg_users_gender_Other_Gender post_arg_users_gender_Pangender post_arg_users_gender_Transfeminine post_arg_users_gender_Transmasculine post_arg_users_gender_Transsexual post_arg_users_gender_Trans_Man post_arg_users_gender_Trans_Woman post_arg_users_gender_Two_Spirit)
@@ -139,6 +139,11 @@ fn users_init {
                 for(i in post_arg_users_vr_Mobile_VR post_arg_users_vr_Standing_VR post_arg_users_vr_360_VR post_arg_users_vr_Roomscale_VR post_arg_users_vr_Full_Body_VR)
                     if(~ $"$i yes)
                         echo $i | sed 's/post_arg_users_vr_//' >> $dir/vr
+
+                if(~ $"post_arg_users_nsfw yes)
+                    touch $dir/nsfw
+                if not
+                    rm $dir/nsfw
             }
 
             notify_errors=$_status
