--- a/sites/vrlfp.net/_kwerc/config
+++ b/sites/vrlfp.net/_kwerc/config
@@ -2,7 +2,10 @@ siteTitle='VRLFP'
 siteSubTitle='Virtual Reality Looking For Partner'
 email='hello@vrlfp.net'
 confirmFrom='noreply@vrlfp.net'
+
 conf_enable_users
 conf_enable_admin
+conf_enable_discord
 conf_hide_paths /img
-if(~ $req_path /discord) extraHttpHeaders=($extraHttpHeaders 'Status: 303 See Other' 'Location: '`{curl -s https://discordapp.com/api/guilds/455219574036496404/widget.json | sed 's,.*(https://discordapp.com/invite/[a-zA-Z0-9]*).*,\1,' | tr -d $NEW_LINE})
+
+if(~ $req_path /discord) extraHttpHeaders=($extraHttpHeaders 'Status: 303 See Other' 'Location: https://discordapp.com/invite/PXsjCx6')
